# MultiStreamDetector

./: .gitignore  CMakeLists.txt  README.md  cdx.txt  main.cpp
detection_results/1.mp4/: summary.txt
include/: common.hpp  threads.h  yolov8_batch.h
